[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["validbayragdarov <validwe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
black = "^24.4.2"
sqlalchemy = {extras = ["standart"], version = "^2.0.31"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
